--- a/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
+++ b/frontend/src/app/modules/features/user/matching-job/matching-job.component.html
@@ -46,10 +46,10 @@
 												{{item?.company?.company}}
 											</h6>
 											<h6 class="text-capitalize">
-												{{item?.city ? item?.city + ', ' : ''}}
-												{{item?.state ? item?.state + ', ' : ''}}
+												{{item?.job_location?.city ? item?.job_location?.city + ', ' : ''}}
+												{{item?.job_location?.state ? item?.job_location?.state + ', ' : ''}}
 												<span >
-													{{item?.country ? item?.country : ''}}
+													{{item?.job_location?.country ? item?.job_location?.country : ''}}
 												</span>
 											</h6>
 											<h6>
