--- a/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/modal/job-preview/job-preview.component.html
@@ -1147,10 +1147,10 @@
 		<button (click)="onClickCloseBtn(false)" type="button" class="btn btn-secondary"
 			data-dismiss="modal">Edit</button>
 		<button *ngIf="!postJobForm.valid || f['number_of_positions']['value'] == 0 " disabled="!postJobForm.valid || f['number_of_positions']['value'] == 0 " (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">
-			{{jobId ? 'Update & Close' : 'Save & Close'}}
+			{{jobId&&!isCopy ? 'Update & Close' : 'Save & Close'}}
 		</button>
 		<button *ngIf="postJobForm.valid && f['number_of_positions']['value'] != 0 " (click)="onRedirectDashboard(false)" type="button" class="btn btn-theme-blue">
-			{{jobId ? 'Update & Close' : 'Save & Close'}}
+			{{jobId&&!isCopy ? 'Update & Close' : 'Save & Close'}}
 		</button>
 	</div>
 
