--- a/frontend/src/app/modules/features/employer/post-job/post-job-footer/post-job-footer.component.html
+++ b/frontend/src/app/modules/features/employer/post-job/post-job-footer/post-job-footer.component.html
@@ -2,8 +2,9 @@
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 1 ">
 		<div class="form-group ">
 			<button [disabled]="!postJobForm.controls.jobInfo.valid" (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">
-			{{isEdit ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
+			{{isEdit&&!isCopy ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}
 			</button>
+			
 		</div>
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 2">
@@ -13,7 +14,7 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 2">
 		<div class="form-group">
-			<button [disabled]="!postJobForm.controls.requirement.valid || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">{{isEdit ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}</button>
+			<button [disabled]="!postJobForm.controls.requirement.valid || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">{{isEdit&&!isCopy ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}</button>
 		</div>
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 3">
@@ -23,7 +24,7 @@
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 3">
 		<div class="form-group">
-			<button [disabled]="!postJobForm.controls.otherPref.valid" (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">{{isEdit ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}</button>
+			<button [disabled]="!postJobForm.controls.otherPref.valid" (click)="onNext()" type="button" class="btn btn-theme-blue btn-block  btnNext">{{isEdit&&!isCopy ? ("shared.updateNext" | translate) : ("shared.next" | translate) }}</button>
 		</div>
 	</div>
 	<div class="col-lg-2 col-md-6" *ngIf="currentTabInfo.tabNumber == 4">
@@ -31,7 +32,12 @@
 			<button (click)="onPrevious()" type="button" class="btn btn-secondary btn-block  btnPrev">{{"shared.previous" | translate}}</button>
 		</div>
 	</div>
-	<div class="col-lg-2 col-md-6" *ngIf="isEdit || currentTabInfo.tabNumber == 4">
+	<div class="col-lg-2 col-md-6" *ngIf="(isEdit || currentTabInfo.tabNumber == 4) && !isCopy">
+		<div class="form-group">
+			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1  || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
+		</div>
+	</div>
+	<div class="col-lg-2 col-md-6" *ngIf="(isCopy  && currentTabInfo.tabNumber == 4)">
 		<div class="form-group">
 			<button [disabled]="!postJobForm.value.screeningProcess.screening_process.length >= 1  || postJobForm.controls.requirement.value.sap_experience > postJobForm.controls.requirement.value.experience || (( postJobForm.controls.requirement.value.sap_experience==0 || postJobForm.controls.requirement.value.experience==0) &&  postJobForm.controls.jobInfo.value.entry ==false ) " (click)="onToggleJobPreviewModal(true)" type="button" class="btn btn-theme-green  btn-block  btnSubmit">{{"shared.submit" | translate}}</button>
 		</div>
