--- a/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
+++ b/frontend/src/app/modules/features/employer/posted-job/posted-job.component.html
@@ -39,27 +39,30 @@
                   {{item?.company?.company ? item?.company?.company : '-'}}
                 </td> -->
                 <td class="text-capitalize">
-                  {{item?.job_location?.city ? item?.job_location?.city + ', ' : ''}}
-                  {{item?.job_location?.state ? item?.job_location?.state + ', ' : ''}}
+                  {{item?.job_locations[0].city ? item?.job_locations[0].city + ', ' : ''}}
+                  {{item?.job_locations[0].state ? item?.job_locations[0].state + ', ' : ''}}
                   <span class="text-uppercase">
-                    {{item?.job_location?.country ? item?.job_location.country : ''}}
+                    {{item?.job_locations[0].country ? item?.job_locations[0].country : ''}}
+                  </span>
+				  <span class="text-uppercase" style="color:blue;cursor:pointer;" *ngIf="item?.job_locations?.length-1 !=0">
+                    +{{item?.job_locations?.length-1}}
                   </span>
                 </td>
                 <td>{{item.created_at ? (item.created_at | date: "MMM dd, y" : 'UTC') : '-'}}</td>
                 <td class="text-center">
-                  <a  [routerLink]="['/employer/dashboard']" *ngIf="item.status != 0 &&  CheckMatchesCount(item?.id,item?.job_location?.id) !=0 "
-                  [queryParams]="{activeTab: 'matches', id: item?.id,location_id: item?.job_location?.id }" href="javascript:;"> {{ CheckMatchesCount(item?.id,item?.job_location?.id)}}</a>
-				   <a   *ngIf="item.status == 0 || CheckMatchesCount(item?.id,item?.job_location?.id) ==0 " style="cursor: no-drop;"
-                   href="javascript:;"> {{ CheckMatchesCount(item?.id,item?.job_location?.id)}}</a>
+                  <a  [routerLink]="['/employer/dashboard']" *ngIf="item.status != 0 &&  CheckMatchesCount(item?.id) !=0 "
+                  [queryParams]="{activeTab: 'matches', id: item?.id }" href="javascript:;"> {{ CheckMatchesCount(item?.id)}}</a>
+				   <a   *ngIf="item.status == 0 || CheckMatchesCount(item?.id) ==0 " style="cursor: no-drop;"
+                   href="javascript:;"> {{ CheckMatchesCount(item?.id)}}</a>
 				  </td>
                 <td class="text-center">
 				<a  [routerLink]="['/employer/dashboard']"
-                  [queryParams]="{activeTab: 'applicants', id: item?.id,location_id: item?.job_location?.id }" *ngIf="CheckAppliedCount(item?.id,item?.job_location?.id) !=0 " > {{ CheckAppliedCount(item?.id,item?.job_location?.id)}}</a>
-				  <a  *ngIf="CheckAppliedCount(item?.id,item?.job_location?.id) ==0 " style="cursor: no-drop;" > {{ CheckAppliedCount(item?.id,item?.job_location?.id)}}</a>
+                  [queryParams]="{activeTab: 'applicants', id: item?.id }" *ngIf="CheckAppliedCount(item?.id) !=0 " > {{ CheckAppliedCount(item?.id)}}</a>
+				  <a  *ngIf="CheckAppliedCount(item?.id) ==0 " style="cursor: no-drop;" > {{ CheckAppliedCount(item?.id)}}</a>
 				  </td>
-                <td class="text-center"><a *ngIf="CheckShortlistedCount(item?.id,item?.job_location?.id) !=0 " [routerLink]="['/employer/dashboard']"
-                  [queryParams]="{activeTab: 'shortlisted', id: item?.id,location_id: item?.job_location?.id }" > {{CheckShortlistedCount(item?.id,item?.job_location?.id)}}</a>
-				  <a  *ngIf="CheckShortlistedCount(item?.id,item?.job_location?.id) ==0 "  style="cursor: no-drop;" > {{CheckShortlistedCount(item?.id,item?.job_location?.id)}}</a>
+                <td class="text-center"><a *ngIf="CheckShortlistedCount(item?.id) !=0 " [routerLink]="['/employer/dashboard']"
+                  [queryParams]="{activeTab: 'shortlisted', id: item?.id }" > {{CheckShortlistedCount(item?.id)}}</a>
+				  <a  *ngIf="CheckShortlistedCount(item?.id) ==0 "  style="cursor: no-drop;" > {{CheckShortlistedCount(item?.id)}}</a>
 				  </td>
                 <td class="text-center" *ngIf="item?.job_location?.status != 0">
                 <select (change)="onSelectStatus($event?.target?.value, item)" class="form-control form-control-td">
@@ -77,7 +80,9 @@
                 <td class="text-center">
                 <!-- <a href="javascript:;" disabled style="cursor: no-drop;" *ngIf="item.status == 0 "  class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a> -->
                 <a href="javascript:;"  *ngIf="item?.job_location?.status != 0 "[routerLink]="['/employer/post-job']" [queryParams]="{id: item?.id}" class="text-info mr-2"  data-toggle="tooltip" title="Edit"><i class="fas fa-edit"></i></a>
+				<a  class="mr-2"  style="color:blue;" [routerLink]="['/employer/post-job']"  [queryParams]="{id: item?.id,status:'copy'}"  data-toggle="tooltip" title="Clone"><i class="far fa-clone"></i></a>
                 <a href="javascript:;" (click)="onDeleteJobConfirm(item, i)" class="text-danger"   data-toggle="tooltip" title="Delete"><i class="fas fa-trash-alt"></i></a>
+                
                 </td>
               </tr>
             </ng-container>
