--- a/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-view/candidate-job-view.component.html
@@ -47,12 +47,24 @@
 										<div class="media-body">
 											<h6>{{postedJobsDetails?.company?.company ? postedJobsDetails?.company?.company : ''}}</h6>
 											<h6 class="text-capitalize">
-												{{postedJobsDetails?.city ? postedJobsDetails?.city + ', ' : ''}}
-												{{postedJobsDetails?.state ? postedJobsDetails?.state + ', ' : ''}}
+												{{postedJobsDetails?.job_location?.city ? postedJobsDetails?.job_location?.city + ', ' : ''}}
+												{{postedJobsDetails?.job_location?.state ? postedJobsDetails?.job_location?.state + ', ' : ''}}
 												<!-- {{postedJobsDetails?.zipcode ? postedJobsDetails?.zipcode + ', ' : ''}} -->
 												<span class="text-uppercase">
-													{{postedJobsDetails?.country ? postedJobsDetails?.country : ''}}
+													{{postedJobsDetails?.job_location?.country ? postedJobsDetails?.job_location?.country : ''}}
 												</span>
+											</h6>
+											<h6 class="font-weight-bold mb-2" >{{"shared.timing" | translate}} : 
+												<ng-container *ngIf="postedJobsDetails?.min ">
+													{{postedJobsDetails?.min | time}}
+												</ng-container>
+												<ng-container *ngIf="postedJobsDetails?.min && postedJobsDetails?.max  ">
+													-
+												</ng-container>
+												
+												<ng-container *ngIf="postedJobsDetails?.max ">
+													{{postedJobsDetails?.max | time}}
+												</ng-container>
 											</h6>
 										</div>
 									</div>
