--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -31,10 +31,10 @@
 									</a>
 									<h6 class="text-capitalize mt-2">{{postedJobsDetails?.company?.company}}</h6>
 									<h6 class="mb-0 text-capitalize job-txt">
-										{{postedJobsDetails?.job_location?.city ? postedJobsDetails?.job_location?.city+', '  : ''}}
-										{{postedJobsDetails?.job_location?.state ? postedJobsDetails?.job_location?.state+', '  : ''}}
+										{{matchingUsers?.profile?.job_location?.city ? matchingUsers?.profile?.job_location?.city+', '  : ''}}
+										{{matchingUsers?.profile?.job_location?.state ? matchingUsers?.profile?.job_location?.state+', '  : ''}}
 										<span class="text-uppercase">
-										  {{postedJobsDetails?.job_location?.country ? postedJobsDetails?.job_location?.country : ''}}
+										  {{matchingUsers?.profile?.job_location?.country ? matchingUsers?.profile?.job_location?.country : ''}}
 										</span>
 									</h6>
 									<h6 class="font-weight-bold mb-2" >{{"shared.timing" | translate}} : 
@@ -93,7 +93,7 @@
 												<div class="card-body">
 													<div class="row">
 														<div class="col-lg-8 col-md-8">
-															<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
+															<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
 																	<h5 class="text-capitalize">
 																		<span>{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
 																		  + (matchingUsers?.profile?.last_name ? matchingUsers?.profile?.last_name : '')}}</span>
@@ -184,7 +184,7 @@
 														  [src]="matchingUsers?.profile?.photo ? (matchingUsers?.meta?.photo?.path+'/'+ matchingUsers?.meta?.photo?.folder+'/'+matchingUsers?.meta?.photo?.sizes?.medium+'/'+matchingUsers?.profile?.photo) : 'assets/images/user-img-icon.jpg'">
 													</div>
 													<div class="pc-info">
-														<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
+														<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsers?.profile?.job_location?.id,id: matchingUsers?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
 															<h5 class="text-capitalize">
 																<span>{{(matchingUsers?.profile?.first_name ? matchingUsers?.profile?.first_name : '') + ' '
 																  + (matchingUsers?.profile?.last_name ? matchingUsers?.profile?.last_name : '')}}</span>
@@ -255,7 +255,7 @@
 														  [src]="matchingUsersNew?.profile?.photo ? (matchingUsersNew?.meta?.photo?.path+'/'+ matchingUsersNew?.meta?.photo?.folder+'/'+matchingUsersNew?.meta?.photo?.sizes?.medium+'/'+matchingUsersNew?.profile?.photo) : 'assets/images/user-img-icon.jpg'">
 													</div>
 													<div class="pc-info">
-														<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{id: matchingUsersNew?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
+														<a [routerLink]="['/employer/candidate-profile']" [queryParams]="{location_id: matchingUsersNew?.profile?.job_location?.id,id: matchingUsersNew?.profile?.id, jobId: postedJobsDetails?.id}" href="javascript:;">
 															<h5 class="text-capitalize">
 																<span>{{(matchingUsersNew?.profile?.first_name ? matchingUsersNew?.profile?.first_name : '') + ' '
 																  + (matchingUsersNew?.profile?.last_name ? matchingUsersNew?.profile?.last_name : '')}}</span>
