--- a/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-multiple-profile-matches/employer-candidate-multiple-profile-matches.component.html
@@ -52,10 +52,19 @@
 													<a   class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
-													<h6 class="mb-0 text-capitalize">
-														{{matchingJob?.jobs?.city +', ' +matchingJob?.jobs?.state+', ' +matchingJob?.jobs?.country}}
+													
+														<h6 class="mb-0 text-capitalize country-details">
+															<ng-container *ngFor="let item of matchingJob?.jobs?.job_locations" >
+															{{item?.city ? item?.city+', '  : ''}}
+															{{item?.state ? item?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{item?.country ? item?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{item?.countryshort ? item?.countryshort : ''}}
+															</span><br>
+															</ng-container>
+														</h6>
 														
-													</h6>
 													<h6 class="mt-1 text-capitalize">
 														{{matchingJob?.jobs?.company_name }}
 													</h6>
@@ -104,10 +113,21 @@
 													<a   class="text-capitalize" href="javascript:;">
 														<h5>{{matchingJobNew?.jobs?.title}} <small></small></h5>
 													</a>
-													<h6 class="mb-0 text-capitalize">
+													<!-- <h6 class="mb-0 text-capitalize">
 														{{matchingJobNew?.jobs?.city +', ' +matchingJobNew?.jobs?.state+', ' +matchingJobNew?.jobs?.country}}
 														
-													</h6>
+													</h6> -->
+													<h6 class="mb-0 text-capitalize country-details">
+															<ng-container *ngFor="let item of matchingJobNew?.jobs?.job_locations" >
+															{{item?.city ? item?.city+', '  : ''}}
+															{{item?.state ? item?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{item?.country ? item?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{item?.countryshort ? item?.countryshort : ''}}
+															</span><br>
+															</ng-container>
+														</h6>
 													<h6 class="mt-1 text-capitalize">
 														{{matchingJobNew?.jobs?.company_name }}
 													</h6>
