--- a/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-profile-matches/employer-candidate-profile-matches.component.html
@@ -31,13 +31,15 @@
 									</a>
 									<h6 class="text-capitalize mt-2">{{postedJobsDetails?.company?.company}}</h6>
 									<h6 class="mb-0 text-capitalize job-txt">
-										{{matchingUsers?.profile?.job_location?.city ? matchingUsers?.profile?.job_location?.city+', '  : ''}}
-										{{matchingUsers?.profile?.job_location?.state ? matchingUsers?.profile?.job_location?.state+', '  : ''}}
+										<ng-container *ngFor="let item of postedJobsDetails?.job_locations" >
+										{{item?.city ? item?.city+', '  : ''}}
+										{{item?.state ? item?.state+', '  : ''}}
 										<span class="text-uppercase">
-										  {{matchingUsers?.profile?.job_location?.country ? matchingUsers?.profile?.job_location?.country : ''}}
-										</span>
+										  {{item?.country ? item?.country : ''}}
+										</span><br>
+										</ng-container>
 									</h6>
-									<h6 class="font-weight-bold mb-2" >{{"shared.timing" | translate}} : 
+									<h6 class="font-weight-bold mb-2"*ngIf="postedJobsDetails?.min && postedJobsDetails?.max">{{"shared.timing" | translate}} : 
 										<ng-container *ngIf="postedJobsDetails?.min ">
 											{{postedJobsDetails?.min | time}}
 										</ng-container>
