--- a/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
+++ b/frontend/src/app/modules/features/user/candidate-job-matches/candidate-job-matches.component.html
@@ -56,7 +56,16 @@
 														<h5>{{matchingJob?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJob?.jobs?.job_location?.city +', ' +matchingJob?.jobs?.job_location?.state+', ' +matchingJob?.jobs?.job_location?.country}}
+														<!-- {{matchingJob?.jobs?.job_location?.city +', ' +matchingJob?.jobs?.job_location?.state+', ' +matchingJob?.jobs?.job_location?.country}} -->
+														<ng-container *ngFor="let items of matchingJob?.jobs?.job_locations" >
+															{{items?.city ? items?.city+', '  : ''}}
+															{{items?.state ? items?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{items?.country ? items?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{items?.countryshort ? items?.countryshort : ''}}
+															</span><br>
+														</ng-container>
 														
 													</h6>
 													<h6 class="mt-1 text-capitalize">
@@ -119,12 +128,21 @@
 														<h5>{{matchingJobNew?.jobs?.title}} <small></small></h5>
 													</a>
 													<h6 class="mb-0 text-capitalize">
-														{{matchingJobNew?.jobs?.job_location?.city +', ' +matchingJobNew?.jobs?.job_location?.state+', ' +matchingJobNew?.jobs?.job_location?.country}}
+														<!-- {{matchingJobNew?.jobs?.job_location?.city +', ' +matchingJobNew?.jobs?.job_location?.state+', ' +matchingJobNew?.jobs?.job_location?.country}} -->
 														<!-- {{matchingJobNew?.jobs?.city ? matchingJobNew?.jobs?.city : ''}}
 														{{matchingJobNew?.jobs?.state ? ', ' + matchingJobNew?.jobs?.state : ''}}
 														<span class="text-uppercase">
 														  {{matchingJobNew?.jobs?.country ? ', ' + matchingJobNew?.jobs?.country : ''}}
 														</span> -->
+														<ng-container *ngFor="let items of matchingJobNew?.jobs?.job_locations" >
+															{{items?.city ? items?.city+', '  : ''}}
+															{{items?.state ? items?.state+', '  : ''}}
+															<span class="text-uppercase" *ngIf="!isMultipleMatches">
+															  {{items?.country ? items?.country : ''}}
+															</span><span class="text-uppercase" *ngIf="isMultipleMatches">
+															  {{items?.countryshort ? items?.countryshort : ''}}
+															</span><br>
+														</ng-container>
 													</h6>
 													<h6 class="mt-1 text-capitalize">
 														{{matchingJobNew?.jobs?.company_name }}
