--- a/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
+++ b/frontend/src/app/modules/features/employer/employer-candidate-matches/employer-candidate-matches.component.html
@@ -209,16 +209,8 @@
                        Availability: {{(item?.availability || item?.availability == 0) ? (item?.availability == 0 ? 'Immediate' : item?.availability + ' Days') : '--'}}
                       </h6>
                       <div class="mt-2">
-						<!-- <ng-container *ngIf="item?.hands_on_experience?.length; else elseHandsTemplate">
-							<ng-container *ngFor="let items of item?.hands_on_experience; let i = index" >
-								<span class="sap-badge"> {{items?.skill_id ? utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(items?.skill_id)?.tag) : '--'}} </span>
-							</ng-container>
-						</ng-container>
-						<ng-template #elseHandsTemplate>
-							<span  class="sap-badge">--</span>
-						</ng-template> -->
                         <ng-container *ngFor="let itemSub of filterData(item?.skills)">
-                          <span *ngIf="itemSub" class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
+                          <span *ngIf="itemSub && utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag) != '--' " class="sap-badge">{{utilsHelperService.onSplitTag(sharedService.onFindSkillsFromSingleID(itemSub)?.tag)}}</span>
                         </ng-container>
                       </div>
                     </div>
@@ -238,49 +230,7 @@
     [pageIndex]="page-1">
 </mat-paginator>
 </div>
-        <!-- <div class="d-flex justify-content-center" *ngIf="((userMeta?.count > 0 && userMeta?.total > 25) && (userMeta?.total != userList?.length))">
-          <button (click)="onLoadMoreJob()" class="btn btn-theme-blue" type="button">
-            Load More
-          </button>
-        </div> -->
-        <!-- <div class="row mt-4 mb-4">
-          <div class="col-lg-12">
-            <div class="card job-card">
-              <div class="card-body">
-                <div class="row">
-                  <div class="col-lg-7">
-                    <a href="javascript:;" [routerLink]="['/employer/job-candidate-matches']" >
-                      <h5>Jacky Smith <small> - Project Manager</small></h5>
-                    </a>
-                  </div>
-                  <div class="col-lg-5 text-right mt-3">
-                    <span data-toggle="modal" data-target="#exampleModal">
-                      <a (click)="onToggleResumeForm(true)" class="btn btn-outline-blue btn-sm mr-1" href="javascript:;">
-                      <i class="fas fa-file-alt"></i> {{"dashboard.resume" | translate}}</a>
-                    </span>
-                    <span data-toggle="modal" data-target="#hireNow">
-                      <a (click)="onToggleSendMail(true)"  class="btn btn-outline-orange btn-sm" href="javascript:;">
-                      <i class="fas fa-paper-plane"></i> {{"dashboard.mail" | translate}}</a>
-                    </span>
-                  </div>
-                  <div class="save-icon active mt-1" data-toggle="tooltip" title="Save"><i class="far fa-bookmark"></i></div>
-                </div>
-                <div class="media">
-                  <img src="assets/images/user-img.jpg">
-                  <div class="media-body">
-                    <h6>8 Yrs Experience, H1B</h6>
-                    <h6>Permanent, Contract, Part Time</h6>
-
-                    <div class="mt-2">
-                      <span class="sap-badge">SAP ABAP</span> <span class="sap-badge">SAP FSCM</span>  <span class="sap-badge">SAP Mobility</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> -->
-      </div>
+    </div>
 
       <!--Side Bar Section-->
       <div class="col-lg-4 col-md-4 matches-4">
@@ -330,14 +280,7 @@
               </ul>
             </div>
           </div>
-          <!-- <div class="card mt-4">
-            <div class="card-header" data-toggle="collapse" data-target="#collapseSalary" aria-expanded="false" aria-controls="collapseSalary">
-              Salary  <i class="fas fa-angle-down float-right pt-1"></i>
-            </div>
-            <div [ngClass]="{'show': (queryParams?.min_experience && queryParams?.max_experience)}" class="card-body p-3 collapse multi-collapse" id="collapseSalary">
-              <ngx-slider (userChangeEnd)="onChangeEve($event)" [(value)]="minValue" [(highValue)]="maxValue" [options]="options"></ngx-slider>
-            </div>
-          </div> -->
+         
           <div class="card mt-4">
             <div class="card-header" data-toggle="collapse" data-target="#collapseSkills" aria-expanded="false" aria-controls="collapseSkills">
              {{"shared.sapSkills" | translate }}    <i class="fas fa-angle-down float-right pt-1"></i>
