--- a/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
+++ b/frontend/src/app/modules/features/user/applied-job/applied-job.component.html
@@ -30,6 +30,11 @@
 										{{item?.employer?.company ? item?.employer?.company : '--'}}
 									</td>
 									<td class="text-capitalize" container="body" placement="top" ngbTooltip="TH3 tooltip" >
+										<!-- {{item?.job_posting?.city ? item?.job_posting?.city + ', ' : ''}}
+										{{item?.job_posting?.state ? item?.job_posting?.state + ', ' : ''}}
+										<span class="text-uppercase">
+											{{item?.job_posting?.country ? item?.job_posting?.country : ''}}
+										</span> -->
 										<ng-container>
 											{{item?.job_posting?.job_locations[0].city ? item?.job_posting?.job_locations[0].city + ', ' : ''}}
 										  {{item?.job_posting?.job_locations[0].state ? item?.job_posting?.job_locations[0].state + ', ' : ''}}
@@ -198,6 +203,7 @@
 	<ng-template *ngIf="toggleMatchesModal" #matchesModal let-modal let-d="dismiss">
 		<div class="modal-content">
 			<div class="modal-body text-center">
+				<!-- <h1 class="text-danger mx-auto pt-4"><i class="far fa-check-circle"></i></h1> -->
 				<h6 class="mt-3" style="font-size: 20px;">{{"shared.notAvailable" | translate}}</h6>
 			</div>
 			<div class="modal-footer">
@@ -229,6 +235,11 @@
 
 			</div>
 			
+			<!-- <div class="modal-footer">
+				<div class=" mx-auto">
+					<button type="button" class="btn btn-theme-blue" style="margin-right:10px;" (click)="closeInvite()"  data-dismiss="modal">{{"shared.close" | translate}}</button>
+				</div>
+			</div> -->
 		</div>	
 	</ng-template>
 </section>
